# mavaric_v2.1

./: .gitignore  CMakeLists.txt  README.md  jobrun  run_local
sims/csrpmd/: CMakeLists.txt  csrpmd.cpp
sims/csrpmd/sampling/: csrpmd_sampling.cpp
sims/csrpmd/sampling/Headers/: csrpmd_sampling.hpp
sims/mvrpmd/: CMakeLists.txt  clean_trajs.py  mvrpmd.cpp  plot_auto_corr.py
sims/mvrpmd/InputFiles/: Dynamics.txt  ElecParameters.txt  MonteCarlo.txt  Sampling.txt  SystemParameters.txt
sims/mvrpmd/Output/: PSV0  broken  conserv_report  equil_report  estimator.txt  mcData0  position  position_auto_corr
sims/mvrpmd/Output/Trajectories/: P  Q  pElec  xElec
sims/mvrpmd/dynamics/: dynamics_mvrpmd.cpp  position_auto_corr.cpp
sims/mvrpmd/dynamics/Headers/: Dynamics.hpp  dynamics_mvrpmd.hpp  position_auto_corr.hpp
sims/mvrpmd/equilibrium/: equilib_mvrpmd.cpp
sims/mvrpmd/equilibrium/Headers/: equilib_mvrpmd.hpp  input_mvrpmd.hpp
sims/mvrpmd/sampling/: SamplingHelper.cpp  sampling_mvrpmd.cpp
sims/mvrpmd/sampling/Headers/: SamplingHelper.h  sampling_mvrpmd.hpp
sims/nrpmd/: CMakeLists.txt  README.txt  nrpmd.cpp
sims/rpmd/: CMakeLists.txt  plot_ac.py  rpmd.cpp
sims/rpmd-bath/: CMakeLists.txt  Stepper_RPMD_B.cpp  Stepper_RPMD_B.h  rpmd-bath.cpp  system_move.cpp  system_move.h
sims/rpmd-bath/equilibrium/: equilibrium_rpmd-bath.cpp  input_rpmd_bath.cpp  move_bath.cpp  move_system.cpp  stepper_rpmd-bath.cpp
sims/rpmd-bath/equilibrium/Headers/: input_rpmd_bath.hpp  move_bath.h  move_system.h
sims/rpmd/InputFiles/: Dynamics.txt  MonteCarlo.txt  Sampling.txt  SystemParameters.txt
sims/rpmd/Output/: PSV0  auto_corr_data.txt  equil_report  estimator.txt  in.txt
sims/rpmd/Output/Trajectories/: P  Q
sims/rpmd/dynamics/: Dynamics.cpp  dynamics_rpmd.cpp  rpmd_auto_corr.cpp  rpmd_energy_conserv.cpp
sims/rpmd/dynamics/Headers/: dynamics_rpmd.hpp  rpmd_auto_corr.hpp  rpmd_dynamics_in.h  rpmd_energy_conserv.hpp
sims/rpmd/equilibrium/: MonteCarloHelper.cpp  equilib_rpmd.cpp  input_rpmd.cpp
sims/rpmd/equilibrium/Headers/: MonteCarloHelper.h  equilib_rpmd.hpp  input_rpmd.hpp
sims/rpmd/sampling/: SamplingHelper.cpp  sampling_rpmd.cpp
sims/rpmd/sampling/Headers/: SamplingHelper.h  sampling_rpmd.hpp
sims/two-particle/: CMakeLists.txt  two-particle.cpp
sims/two-particle/InputFiles/: Dynamics.txt  MonteCarlo.txt  Sampling.txt  SystemParameters1.txt  SystemParameters2.txt
sims/two-particle/Output/: histogram.py
sims/two-particle/dynamics/: two_particle_Dynamics.cpp
sims/two-particle/dynamics/Headers/: two_particle_Dynamics.hpp
sims/two-particle/equilibrium/: MonteCarloHelper.cpp  input.cpp  two_particle_mc.cpp
sims/two-particle/equilibrium/Headers/: MonteCarloHelper.h  input.hpp  two_particle_mc.hpp
sims/two-particle/sampling/: SamplingHelper.cpp  two_particle_sampling.cpp
sims/two-particle/sampling/Headers/: SamplingHelper.h  two_particle_sampling.hpp
src/estimators/: CMakeLists.txt  MVRPMD_Estimator.cpp  MVRPMD_MTS_Estimator.cpp  dM_Matrix_MTS_dBeta.cpp  dM_Matrix_dBeta.cpp  dTheta_MTS_dBeta.cpp  dTheta_dBeta.cpp  mvrpmd_Esplit_esti.cpp  mvrpmd_mixed_esti.cpp  rpmd_estimator.cpp  theta_Esplit_dBeta.cpp  theta_mixed_dBeta.cpp  two_particle_Estimator.cpp
src/estimators/Headers/: MVRPMD_Estimator.hpp  MVRPMD_MTS_Estimator.hpp  dM_Matrix_MTS_dBeta.hpp  dM_Matrix_dBeta.hpp  dTheta_MTS_dBeta.hpp  dTheta_dBeta.hpp  mvrpmd_Esplit_esti.hpp  mvrpmd_mixed_esti.hpp  rpmd_estimator.hpp  theta_Esplit_dBeta.hpp  theta_mixed_dBeta.hpp  two_particle_Estimator.hpp
src/estimators/test/: test.cpp
src/forces/: CMakeLists.txt  Forces_MTS.cpp  Forces_two_particles.cpp  csrpmd_forces.cpp  dCdelec.cpp  dM_Matrix_MTS_dQ.cpp  dM_Matrix_dQ.cpp  dSpring_dQ.cpp  dStateDep_dQ.cpp  dStateIndep_dQ.cpp  dTheta_MTS_dElec.cpp  dTheta_MTS_dQ.cpp  mvrpmd_Esplit_forces.cpp  mvrpmd_mixed_forces.cpp  nrpmd_forces.cpp  rpmd_force.cpp  theta_Esplit_dElec.cpp  theta_Esplit_dQ.cpp  theta_mixed_dElec.cpp  theta_mixed_dQ.cpp
src/hamiltonian/: BathSpringEnergy.cpp  CMakeLists.txt  C_Matrix.cpp  CouplingEnergy.cpp  GTerm.cpp  MVRPMD_Hamiltonian.cpp  MVRPMD_MTS_Hamiltonian.cpp  M_Matrix.cpp  M_Matrix_MTS.cpp  RPMD_B_Hamiltonian.cpp  RPMD_Hamiltonian.cpp  SpringEnergy.cpp  StateDepPots.cpp  StateIndepPot.cpp  Theta.cpp  Theta_MTS.cpp  csrpmd_ham.cpp  mvrpmd_Esplit_ham.cpp  mvrpmd_mixed_ham.cpp  rpmd_ham.cpp  sc_potential.cpp  theta_Esplit.cpp  theta_mixed.cpp  two_particle_Hamiltonian.cpp
src/hamiltonian/Headers/: BathSpringEnergy.h  C_Matrix.h  CouplingEnergy.h  GTerm.h  MVRPMD_Hamiltonian.hpp  MVRPMD_MTS_Hamiltonian.hpp  M_Matrix.h  M_Matrix_MTS.hpp  RPMD_B_Hamiltonian.h  RPMD_Hamiltonian.hpp  SpringEnergy.h  StateDepPots.h  StateIndepPot.h  Theta.h  Theta_MTS.hpp  csrpmd_ham.hpp  mvrpmd_Esplit_ham.hpp  mvrpmd_mixed.hpp  mvrpmd_mixed_ham.hpp  rpmd_ham.hpp  sc_potential.hpp  theta_Esplit.hpp  theta_mixed.hpp  two_particle_Hamiltonian.hpp
src/hamiltonian/test/: test.cpp
src/hamiltonian/test/.ipynb_checkpoints/: MVRPMD Mixed Test-checkpoint.ipynb
src/integrators/: ABM_MVRPMD.cpp  CMakeLists.txt  RK4_MVRPMD.cpp  VV_two_particle.cpp  mvrpmd_special.cpp  rpmd_vv.cpp
src/misc/: CMakeLists.txt  MainHlpr.cpp  PopulationEstimator.cpp  aggregate.cpp  auto_correlation.cpp  decorrelation.cpp  energy_conserv.cpp  init_PAC.cpp  lyapunov.cpp  mpi_wrapper.cpp  pop_estimators.cpp
src/misc/Headers/: MainHlpr.hpp  PopulationEstimator.hpp  a.out  aggregate.hpp  auto_correlation.hpp  decorrelation.h  deviates.h  dynamics_in.h  electronic_in.h  energy_conserv.hpp  errors.h  functions.hpp  gamma.h  init_PAC.hpp  lyapunov.hpp  lyp_funcs.hpp  monte_carlo_in.h  mpi_wrapper.hpp  nr3.h  pop_estimators.hpp  sampling_in.h  simpson.hpp  system_in.h
src/misc/test/: test.cpp
src/monte_carlo/: CMakeLists.txt  elec_step.cpp  rpmd_system_step.cpp  system_step.cpp
src/monte_carlo/Headers/: elec_step.hpp  rpmd_system_step.hpp  system_step.hpp
src/monte_carlo/test/: test.cpp
tools/: decorr.py  histogram.py  remove_broken.py
tools/test_modules/: ABM.py  CMatrix.py  MMatrix.py  RK4.py  Theta.py  Theta_Esplit.py  (+7 more)
(+37 files in other folders)
